apps/napi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: napi
resources:
  - namespace.yaml
  - deployment.yaml
  - service.yaml
  - ingress.yaml
