apps/napi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: napi
  labels:
    app: napi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: napi
  template:
    metadata:
      labels:
        app: napi
    spec:
      containers:
        - name: napi
          image: harbor.zatto-lab.cloud/napi/napi:0.1.5.2
          ports:
            - containerPort: 3000
