apps/napi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: napi
  labels:
    app: napi
spec:
  selector:
    app: napi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
