apps/napi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: napi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - napi.topsky.app
      secretName: napi-tls
  rules:
    - host: napi.topsky.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: napi
                port:
                  number: 80
